# Cam-Pic-TX

./: README.md
old_stuff/platformio-version/esp-fpv-arduino/: platformio.ini
old_stuff/platformio-version/esp-fpv-arduino/src/: main.cpp
old_stuff/src/cam_receiver/: udp_client.py
old_stuff/src/cam_sender/: cam_sender.ino
pc_server/: packet_handler.cpp  packet_handler.h  udp_server.cpp
platformio-version/esp-fpv/: CMakeLists.txt
platformio-version/esp-fpv-arduino/src/: main.cpp  packet_handler.h
receiver/udp_server/: udp_server.sln
receiver/udp_server/Debug/: udp_server.ilk
receiver/udp_server/udp_server/: .gitignore  main.cpp  udp_receiver_win.cpp  udp_receiver_win.h  udp_server.cpp  udp_server.vcxproj  udp_server.vcxproj.filters
receiver/udp_server/udp_server/Debug/: vc141.idb
sender/esp-fpv-arduino/src/: main.cpp
sender/pi-fpv/: CMakeLists.txt  Makefile  TODO.txt  frame1280x720_yuyv422.yuv
sender/pi-fpv/app/: CMakeLists.txt  fpv_sender.cpp
sender/pi-fpv/docs/: 配置.md
sender/pi-fpv/include/camera/: cam_controller.h  camera_config.h  fmt_utils.h
sender/pi-fpv/include/communication/: packet_handler.h
sender/pi-fpv/lib/: packet_handler.h  v4l2_capture.h
sender/pi-fpv/resources/yuv-resource/: aaa0.yuv  (+59 more)
sender/pi-fpv/src/: CMakeLists.txt  TODO.txt  cam_controller.h  cam_controller_impl.cpp  cam_controller_impl.h  camera_config.h  stream_cap_test.cpp  udp_client.cpp  v4l2_capture.c  v4l2_capture.cpp  v4l2_capture.h
sender/pi-fpv/src/camera/: CMakeLists.txt  README.md  cam_controller.h  cam_controller_impl.cpp  cam_controller_impl.h  camera_config.h  fmt_utils.cpp  fmt_utils.h
sender/pi-fpv/src/camera/cam_driver/: CMakeLists.txt  v4l2_capture.c  v4l2_capture.h
sender/pi-fpv/src/encoder/: CMakeLists.txt  README.md  compile.sh  config_ffmpeg_rpi.sh  decoder.hpp  en-de-test.cpp  encode_video.c  encoder.hpp  encoder_impl.cpp  encoder_impl.h  test.h264  test3.h264  test4.h264  utils.cpp
sender/pi-fpv/src/encoder/test/: compile.sh  decode_video.c  encode_video.c  libavcoderc_test.cpp
sender/pi-fpv/test/: CMakeLists.txt  a.out  stream_cap_test.cpp  v4l2_framerate_test.c
src/cam_receiver/: udp_server.py
src/cam_sender/: cam_sender.ino
(+151 files in other folders)
